--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^7.3.17",
     "@react-navigation/native": "^7.1.13",
     "@react-navigation/native-stack": "^7.3.18",
+    "@sentry/react-native": "^6.15.1",
     "expo": "~53.0.12",
     "expo-apple-authentication": "~7.2.4",
     "expo-auth-session": "~6.2.0",
