--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-apple-authentication": "~7.2.4",
     "expo-auth-session": "~6.2.0",
     "expo-linking": "~7.1.5",
+    "expo-router": "^5.1.0",
     "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
